[tool.poetry]
name = "avalanche-dashboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
plotly = "^5.17.0"
panel = "^1.2.3"
numpy = "^1.26.0"
openpyxl = "^3.1.2"
statsmodels = "^0.14.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
